# dune-ocaml-sample

./: README.md  dune-project  makefile  week1.opam
.devcontainer/: devcontainer.json
lib/: dune  ex_1.ml  ex_2.ml  ex_3.ml  ex_4.ml
test/: dune  ex1_test.ml  ex2_test.ml  ex3_test.ml  ex4_test.ml
